# ai-platform-deployment-agent

./: .gitignore  README.md  architecture.mmd  implementation_plan.md  pyproject.toml  verify_endpoints.py  verify_regression.py
data/: cluster_status.json  enterprise_policies.json  model_registry.json  security_scans.json
data/deployment_requests/: req_001_standard.json  req_002_critical_cve.json  req_003_poor_metrics.json
docs/: architecture.md  demo_script.md  final_submission_text.md  project_summary.md  screenshots_checklist.md
public/: app.js  index.html  style.css
src/: main.py  mcp_server.py
src/agents/: __init__.py  coordinator.py  infrastructure.py  policy_decision.py  quality.py  risk_assessment.py  security.py
src/models/: __init__.py  schemas.py
src/skills/: __init__.py  policy_checker.py  quality_checker.py  resource_validator.py
src/tools/: __init__.py  mcp_tools.py
src/utils/: helpers.py
tests/: test_agents.py
